Add domain search

--- a/lectures/week6_lecture/pubspec.yaml
+++ b/lectures/week6_lecture/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^7.3.3
   http: ^0.13.4
   provider: ^6.0.1
+  stream_transform: ^2.0.0
 
 dev_dependencies:
   flutter_test:
