--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -69,6 +69,12 @@
             "type": "dart"
         },
         {
+            "name": "week8_lab",
+            "cwd": "labs/week8_lab",
+            "request": "launch",
+            "type": "dart"
+        },
+        {
             "name": "week1_lecture",
             "cwd": "lectures/week1_lecture",
             "request": "launch",
