--- a/labs/week6_lab/macos/firebase_app_id_file.json
+++ b/labs/week6_lab/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:152105901480:ios:1bd1b1015ee4d8f280519d",
-  "FIREBASE_PROJECT_ID": "shoutbox-dd69b",
-  "GCM_SENDER_ID": "152105901480"
+  "GOOGLE_APP_ID": "1:426362135894:ios:01498d34aba03ff191a2f7",
+  "FIREBASE_PROJECT_ID": "shoutbox-newest",
+  "GCM_SENDER_ID": "426362135894"
 }
