--- a/labs/week7_lab/pubspec.yaml
+++ b/labs/week7_lab/pubspec.yaml
@@ -18,29 +18,27 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
-  cloud_firestore: ^3.1.0
+  cloud_firestore: ^4.1.0
   cupertino_icons: ^1.0.2
-  firebase_auth: ^3.2.0
-  firebase_core: ^1.10.0
+  firebase_auth: ^4.1.3
+  firebase_core: ^2.3.0
   flutter:
     sdk: flutter
-  flutter_bloc: ^7.3.3
-  http: ^0.13.4
+  flutter_bloc: ^8.1.1
+  http: ^0.13.5
   intl: ^0.17.0
-  provider: ^6.0.1
-  stream_transform: ^2.0.0
+  provider: ^6.0.4
+  stream_transform: ^2.1.0
 
 dev_dependencies:
-  bloc_test: ^8.5.0
-  build_runner: ^2.1.5
-  flutter_lints: ^1.0.0
+  bloc_test: ^9.1.0
   flutter_test:
     sdk: flutter
   leancode_lint: ^1.1.0
-  mockito: ^5.0.16
+  mocktail: ^0.3.0
 
 flutter:
   uses-material-design: true
