--- a/labs/week8_lab/pubspec.yaml
+++ b/labs/week8_lab/pubspec.yaml
@@ -15,7 +15,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cached_network_image: 3.2.3
+  cached_network_image: ^3.2.3
   flutter:
     sdk: flutter
   intl: ^0.17.0
