--- a/lectures/week10_lecture/pubspec.yaml
+++ b/lectures/week10_lecture/pubspec.yaml
@@ -5,25 +5,25 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.18.5 <3.0.0"
+  sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: 8.1.1
-  json_annotation: 4.7.0
-  http: 0.13.5
-  provider: 6.0.4
+  flutter_bloc: ^8.1.3
+  json_annotation: ^4.8.1
+  http: ^1.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
-  bloc_test: 9.1.0
-  build_runner: 2.2.1
+  bloc_test: ^9.1.4
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  mocktail: 0.3.0
-  golden_toolkit: 0.13.0
-  json_serializable: 6.5.4
+  json_serializable: ^6.7.1
+  leancode_lint: ^6.0.0
+  mocktail: ^1.0.0
+  golden_toolkit: ^0.15.0
 
 flutter:
   uses-material-design: true
