--- a/lectures/week11_lecture/pubspec.yaml
+++ b/lectures/week11_lecture/pubspec.yaml
@@ -3,17 +3,17 @@ description: A sample command-line application.
 version: 1.0.0
 
 environment:
-  sdk: ">=2.18.5 <3.0.0"
+  sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
-  bloc: ^8.1.0
-  freezed_annotation: ^2.2.0
-  json_annotation: ^4.7.0
-  meta: ^1.8.0
+  bloc: ^8.1.2
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  meta: ^1.10.0
 
 dev_dependencies:
-  build_runner: ^2.3.3
-  freezed: ^2.3.2
-  json_serializable: ^6.5.4
-  lints: ^2.0.0
-  test: ^1.16.0
+  build_runner: ^2.4.6
+  freezed: ^2.4.2
+  json_serializable: ^6.7.1
+  leancode_lint: ^6.0.0
+  test: ^1.24.6
