--- a/lectures/week5_lecture/pubspec.yaml
+++ b/lectures/week5_lecture/pubspec.yaml
@@ -3,13 +3,13 @@ description: A simple command-line application.
 version: 1.0.0
 
 environment:
-  sdk: '>=2.14.4 <3.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 dev_dependencies:
   lints: ^2.0.0
 dependencies: 
-  convert: ^3.0.1
-  dio: ^4.0.1
-  dio_http2_adapter: ^2.0.0
-  http: ^0.13.4
-  http_parser: ^4.0.0
+  convert: ^3.1.1
+  dio: ^5.3.2
+  dio_http2_adapter: ^2.3.1+1
+  http: ^1.1.0
+  http_parser: ^4.0.2
