--- a/lectures/week9_lecture/pubspec.yaml
+++ b/lectures/week9_lecture/pubspec.yaml
@@ -5,25 +5,25 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.18.1 <3.0.0"
+  sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
-  bloc: ^8.1.0
+  bloc: ^8.1.2
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.1
-  form_bloc: ^0.30.0
-  freezed_annotation: 2.2.0
-  meta: ^1.8.0
-  provider: ^6.0.4
-  tuple: ^2.0.1
+  flutter_bloc: ^8.1.3
+  form_bloc: ^0.31.0
+  freezed_annotation: ^2.4.1
+  meta: ^1.9.1
+  provider: ^6.0.5
+  tuple: ^2.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: 2.0.0
-  build_runner: 2.3.2
-  freezed: 2.3.0
+  leancode_lint: ^6.0.0
+  build_runner: ^2.4.6
+  freezed: ^2.4.2
 
 flutter:
   uses-material-design: true
