--- a/labs/week3_lab/pubspec.yaml
+++ b/labs/week3_lab/pubspec.yaml
@@ -37,10 +37,7 @@ dependencies:
   go_router: ^12.0.0
   intl: ^0.18.1
   bookstore_data:
-    git:
-      url: https://github.com/leancodepl/flutter-at-mini
-      ref: "2023/2024"
-      path: "labs/bookstore_data"
+    path: ../bookstore_data
 
 dev_dependencies:
   flutter_test:
