Add launch configurations

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,110 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "week2_lecture",
-            "cwd": "lectures/week2_lecture",
+            "name": "Week 1",
+            "cwd": "labs/week1",
             "request": "launch",
             "type": "dart"
-        },
-        {
-            "name": "week2_lab",
-            "cwd": "labs/week2_lab",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "week3_lab",
-            "cwd": "labs/week3_lab",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "week3_lab (profile mode)",
-            "cwd": "labs/week3_lab",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "profile"
-        },
-        {
-            "name": "week4_lab examples",
-            "cwd": "labs/week4_lab/lab4_examples",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "week4_lab",
-            "cwd": "labs/week4_lab/lab4_boilerplate",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "week4_lab (profile mode)",
-            "cwd": "labs/week4_lab",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "profile"
-        },
-        {
-            "name": "week5_lab",
-            "cwd": "labs/week5_lab",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "week5_lab (profile mode)",
-            "cwd": "labs/week5_lab",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "profile"
-        },
-        {
-            "name": "week6_lab",
-            "cwd": "labs/week6_lab",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "week7_lab",
-            "cwd": "labs/week7_lab",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "week8_lab",
-            "cwd": "labs/week8_lab",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "week3_lecture",
-            "cwd": "lectures/week3_lecture",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "week5_lecture",
-            "cwd": "lectures/week5_lecture",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "week6_lecture",
-            "cwd": "lectures/week6_lecture",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "week12_lecture",
-            "cwd": "lectures/week12_lecture",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "week12_lecture (device preview)",
-            "cwd": "lectures/week12_lecture",
-            "request": "launch",
-            "type": "dart",
-            "program": "lib/main_device_preview.dart"
         },
     ]
 }
