Add run configurations

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,5 +10,11 @@
             "request": "launch",
             "type": "dart"
         },
+        {
+            "name": "Week 2",
+            "cwd": "labs/week2",
+            "request": "launch",
+            "type": "dart"
+        },
     ]
 }
