--- a/labs/week1/analysis_options.yaml
+++ b/labs/week1/analysis_options.yaml
@@ -1,9 +1,7 @@
 include: package:leancode_lint/analysis_options.yaml
 
 analyzer:
+  errors:
+    avoid_print: ignore
   plugins:
     - custom_lint
-
-linter:
-  rules:
-    - avoid_print: false
